2.1.7
- update to SABnzbd-0.7.0
- update to Headphones-89c2a8c

2.1.6
- fixed another startup bug

2.1.5
- fixed bug in startup (caused by couchpotatoserver / configobj)
- add possibilty to start / stop addon from addon manager with enable / disable

2.1.4
- fixes bug in sleep control
- added couchpotato v2
- added ability to enable or disable parts of the Suite from the addon settings page

2.1.3
- fix so python dont steal xbmc's webserver port (again)
- add option to wake up periodically
- update to SickBeard-a24eac6
- update to Headphones-298463a

2.1.2
- improve startup script

2.1.1
- update to addon version 2.1
- update to SABnzbd-0.6.15
- update to SickBeard-a24eac6
- update to CouchPotato-46dbb59
- update to Headphones-818458e

2.0.1
- fix so python dont steal xbmc's webserver port

2.0.0
- prepare for OpenELEC-2.0 release
- update to SABnzbd-0.6.14
- update to SickBeard-9b43f71 
- update to CouchPotato-75f12fa
- update to Headphones-8d80c6d

1.90.2
- depends on xbmc.python API 2.0

1.90.1
- rebuild for OpenSSL upgrade

1.90.0
- prepare for OpenELEC-1.90 release

1.0.0
- update to unrar-4.0.7
- update to CouchPotato-4eec8e0
- update to Headphones-e9a1e55
- update to SickBeard-9f64728
- update to SABnzbd-0.6.10
- prepare for OpenELEC-1.0 release

0.99.4
- add Headphones-ee3326e

0.99.3
- rebuild against fixed 'yenc', 'Cheetah' and 'pyOpenSSL'

0.99.2
- update to SABnzbd-0.6.7
- update to SickBeard-e0e8f0e
- update to CouchPotato-6cd66ae 

0.99.1
- initial version SABnzbd-Suite