@@ -1,6 +1,7 @@
 2.1.7
 - update to SABnzbd-0.7.0
 - update to Headphones-89c2a8c
+- if sabnbzd enabled perform "Keep awake while downloading" and "Wake up periodically"
 
 2.1.6
 - fixed another startup bug
